# hackuci-2023

./: .gitignore  README.md  meili_fly.toml  uci_rmp_raw_text.txt
RMPscraper/: ProfML.ipynb  ProfessorScraper.ipynb  averages.csv  course_grades.csv  final_regression.csv  get_professors.py  merged.csv  phillip_ProfessorScraper.ipynb  professors.csv  ready.csv  uci_rmp_raw_text.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: Course.tsx  Nav.tsx  Schedule.tsx  SideContent.tsx  Sidebar.tsx
schedule/: all_course_info.json  all_course_names.txt  class_info.py  generate.hpp  generate.py  schedule_of_classes.py  schedule_structure.py  schedule_structure_test.py
web/: Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  fly.toml  main.py  pyproject.toml  requirements.txt
web/schedule/: avg_gpa.csv  course_grades.csv  final_regression.csv  generate.py  ranking.py  schedule_structure.py  schedule_structure_test.py  score.csv
