[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Phillip Cutter <mrfleap@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
orjson = "^3.8.5"
fuzzy-match = "^0.0.1"
numpy = "^1.24.1"
meilisearch = "^0.23.0"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
